--- a/rb_build.html
+++ b/rb_build.html
@@ -7,8 +7,8 @@
       Review Assignment
 
       Red Ball Pizza Building Form
-      Author: 
-      Date:   
+      Author: joseph brown
+      Date: 12/3/19  
 
       Filename:   rb_build.html
 
